--- a/service.yml
+++ b/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-service
+  name: prtimage-service
 spec:
   selector:
-    app: nginx
+    app: prtimage
   type: NodePort
   ports:
     - protocol: TCP
